<?xml version="1.0" encoding="utf-8"?><!-- Use DrawerLayout as root container for activity To add a
navigation drawer, first declare a DrawerLayout as the root view. Inside the DrawerLayout, add a
layout for the main UI content and another view that contains the contents of the navigation drawer.-->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.HomeActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="@dimen/dimen_5"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_20"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.activity.HomeActivity">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.4"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/homeNestedScrollView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <FrameLayout
                    android:id="@+id/nowPlayingFrameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <FrameLayout
                    android:id="@+id/topRatedFrameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nowPlayingFrameLayout" />

                <FrameLayout
                    android:id="@+id/upcomingFrameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/topRatedFrameLayout" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/popularMoviesCardView"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_60"
                    android:layout_margin="@dimen/dimen_10"
                android:foreground="?selectableItemBackground"
                android:onClick="onViewClicked"
                app:cardBackgroundColor="@color/card_bg"
                app:cardCornerRadius="@dimen/dimen_5"
                app:layout_constraintEnd_toStartOf="@+id/trendingMoviesCardView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upcomingFrameLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_5">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:alpha="0.4"
                        android:contentDescription="@null"
                        android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvPopularMovies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_movies_title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_18"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/trendingMoviesCardView"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_60"
                android:layout_margin="@dimen/dimen_10"
                android:background="@drawable/popular_movie_bg"
                android:foreground="?selectableItemBackground"
                android:onClick="onViewClicked"
                app:cardBackgroundColor="@color/card_bg"
                app:cardCornerRadius="@dimen/dimen_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/popularMoviesCardView"
                app:layout_constraintTop_toBottomOf="@+id/upcomingFrameLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_5">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:alpha="0.4"
                        android:contentDescription="@null"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvTrendingMovies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trending_movies_title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_18"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout></androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- Navigation view has two main attributes: header layout and menu layout
    header layout will show the top portion of the navigation view containing the name,
    profile image and menu contains the items listed below the header layout-->
<com.google.android.material.navigation.NavigationView
android:fitsSystemWindows="true"
android:id="@+id/navigationView"
android:layout_gravity="start"
android:layout_height="match_parent"
android:layout_width="wrap_content"
app:headerLayout="@layout/nav_header_main"
app:menu="@menu/activity_main_drawer" /></androidx.drawerlayout.widget.DrawerLayout>